<resources>
    <string name="app_name">dokdo</string>
    <string name="title_activity_tab_view_main">TabViewMain</string>
    <string name="tab_text_1">관할 공유</string>
    <string name="tab_text_2">배정 픽업</string>
    <string name="tab_text_3">완료 취소</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="duty">출근</string>
    <string name="rest">휴식</string>
    <string name="done">퇴근</string>

    <string name="login_fail">로그인할 수 없습니다.</string>

    <string-array name="planets_array">
        <item>Mer</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>


    <string name="menu_category_1">안내</string>
    <string name="menu_category_2">캐시</string>
    <string name="menu_category_3">관리</string>
    <string name="menu_category_4">설정</string>
    <string name="menu_category_5">서비스</string>

    <string name="category_1_item_1">공지사항</string>
    <string name="category_1_item_2">안전 가이드</string>

    <string name="category_2_item_1">내 계좌 정보</string>
    <string name="category_2_item_2">거래</string>
    <string name="category_2_item_3">거래 내역</string>
    <string name="category_2_item_4">자동조정 정책</string>

    <string name="category_3_item_1">정산 조회</string>
    <string name="category_3_item_2">활동 조회</string>

    <string name="category_4_item_1">내 정보</string>
    <string name="category_4_item_2">환경설정</string>

    <string name="category_5_item_1">부릉몰</string>


    <string name="gps_enable">GPS를 활성화 해 주세요</string>

    <!-- 거래-->
    <string name="mcash_title">보유 M캐시</string>
    <string name="my_refund">내 계좌 환급</string>
    <string name="transfer">지점 전송</string>
    <string name="bank_account">환급 계좌</string>
    <string name="request_amt">신청 금액</string>
    <string name="commision">수수료</string>
    <string name="reduct_mcash">차감 M캐시</string>
    <string name="button_request">신청하기</string>

    <!-- 거래 내역 -->
    <string name="cashback_str">캐시 거래</string>

    <!-- 정산조회  -->
    <string name="today">오늘</string>
    <string name="yesterday">어제</string>
    <string name="week">일주일</string>
    <string name="month">한달</string>

    <string name="total_cnt">총 완료 건수</string>
    <string name="total_commission">총 총 배송수수료</string>
    <string name="after_commission">후정산</string>
    <string name="jingsu">원청징수</string>

    <string name="see_balance_deatil">자세히보기</string>


    <!-- 활동조회 -->
    <string name="search_date">조회일</string>
    <string name="change_date">조회 일자 변경</string>
    <string name="order_complete_cnt">오더 완료 건수</string>
    <string name="pickup_request_over_cnt">픽업요청 초과 오더 수행 건수</string>
    <string name="pickup_avg_time">배정 후 픽업 평균 시간</string>
    <string name="pickup_to_complete_avg">픽업 후 완료 평균 시간</string>
    <string name="order_avg_distance">오더 평균 거리</string>
    <string name="order_acc_distance">오더 누적 거리</string>
    <string name="pickup_request_comple">픽업요청시간달성</string>
    <string name="pickup_20min_comple">접수 후 픽업 20분 달성</string>
    <string name="pickup_40min_comple">접수 후 완료 40분 달성</string>
    <string name="no_dat">전월 데이터 없음</string>
    <string name="complete_rate">달성률</string>




</resources>
