<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.CalculateBalance.CalculateBalance">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/period_radio_grp"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radio_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"/>
                    <RadioButton
                        android:id="@+id/radio_yesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday"/>
                    <RadioButton
                        android:id="@+id/radio_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/week"/>
                    <RadioButton
                        android:id="@+id/radio_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"/>
                </RadioGroup>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="2019-01-01"/>
                <TextView
                    android:text="2020-01-01"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>
                <TextView
                    android:text="@string/total_cnt"/>
                <TextView
                    android:id="@+id/total_complete_cnt"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/total_commission"/>
                <TextView
                    android:id="@+id/total_commision"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/after_commission"/>
                <TextView
                    android:id="@+id/total_after_commission"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/jingsu"/>
                <TextView
                    android:id="@+id/total_jingsu"
                    />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
