<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/refund_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/bank_account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bank_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/account_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/request_amt" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/whole_amt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전액" />

                <EditText
                    android:id="@+id/request_amt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="원" />
            </LinearLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/commision"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/commision_amt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="원" />
            </LinearLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/reduct_mcash"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reduct_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="원" />
            </LinearLayout>

        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/request_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="신청하기"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/cardview_shadow_end_color"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>